--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -4,15 +4,9 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<style>
-			html,
-			body {
-				min-height: 100vh;
-			}
-		</style>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" style="margin: 0">
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
